@@ -1,3 +1,10 @@
+2010-04-25  Noel O'Boyle
+
+	* test\CMakeLists.txt, test\testbindings.py, test\testexample.py:
+	Enable the use of the Python bindings for testing. Run the Pybel
+	tests. Add a simple example test as a template.
+	* scripts\python\examples\testpybel.py: Get the Pybel tests to pass
+
 2010-04-22  Noel O'Boyle
 
 	* src/GUI/OBGUI.cpp: Fixes for Unicode build. Now have SVG depiction
